remove devtools on non local and fix sidebar on mobile

--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ p {
         right: 0;
         bottom: 0;
         background: rgba(0, 0, 0, 0.8);
-        z-index: 150;
+        z-index: 99;
     }
 
     .overlay.active {
